# sudoku

./: CMakeLists.txt  LICENSE.md  README.md  board.h  board_mini.h  board_reader.h  main.cpp  options.h  solution.h  solver.h  stopwatch.h
.github/workflows/: ci.yml
test/unittest/: CMakeLists.txt  test_board.cpp  test_board_reader.cpp  test_options.cpp  test_solver.cpp
